--- a/Rafael/Relatório parcial.qmd
+++ b/Rafael/Relatório parcial.qmd
@@ -34,7 +34,7 @@ Depois de geradas, as mesmas series foram replicadas para os diferentes métodos
 
 ## Resultados
 
-A forma para a medição do impacto do método de imputação dos dados faltantes **(citar método utilizado)** em cada ajuste foi a geração de séries duplicadas. Após remoção aleatória de dados em diferentes porcentagens, sendo elas 5%, 10%, 20% e 40% essas lacunas foram preenchidas com algum método de imputação de dados, e depois disso, foi calculado a raiz do erro quadrático médio entre essa série que passou por modificação e a série que se mateve original. Os resultados foram registrados em tabelas para cada método de imputação e para dois tamanhos de amostra, 100 observações e 1000 observações. Esses resultados, que se encontram à seguir, foram separados em subceções para cada tamanho de amostra. Dessa forma, podemos comparar o efeito de cada método de imputação de dados para amostras de cada tamanho separadamente, analisando o impacto em relação a quantidade de dados faltantes gerados e o ajuste da série.
+A forma para a medição do impacto do método de imputação dos dados faltantes **(citar método utilizado)** em cada ajuste foi a geração de séries duplicadas. Após remoção aleatória de dados em diferentes porcentagens, sendo elas 5%, 10%, 20% e 40% essas lacunas foram preenchidas com algum método de imputação de dados, e depois disso, foi calculado a raiz do erro quadrático médio (RMSE) entre essa série que passou por modificação e a série que se mateve original. Os resultados foram registrados em tabelas para cada método de imputação e para dois tamanhos de amostra, 100 observações e 1000 observações. Esses resultados, que se encontram à seguir, foram separados em subceções para cada tamanho de amostra. Dessa forma, podemos comparar o efeito de cada método de imputação de dados para amostras de cada tamanho separadamente, analisando o impacto em relação a quantidade de dados faltantes gerados e o ajuste da série.
 
 ### Amostras de 100 observações:
 
@@ -42,20 +42,6 @@ Nessa subseção se encontram os resultados obtidos através do processo de impu
 
 ```{r}
 cemmedia <- read.csv("Planilhas/cemmedia.csv") 
-
-ajustetabela <- function(data,col0, col1,col2,col3,col4,col5){
-  guarapan <- data %>%
-    rename(
-         AR_0.4 = {{col1}},
-         AR_0.6 = {{col2}},
-         AR_0.2_0.4 = {{col3}}, 
-         AR_0.4_0.5 = {{col4}}, 
-         ARMA_0.4_0.2 = {{col5}}
-         );
-print(guarapan)
-}
-    
-library(dplyr)
 
 ajustetabela <- function(data, col1, col2, col3, col4, col5) {
   col1 <- enquo(col1)
@@ -85,9 +71,9 @@ ajustetabela(cemmedia,"AR.Rmse.04","AR.Rmse.06","AR.Rmse.0204","AR.Rmse.0405","A
 
 ------------------------------------------------------------------------
 
-**Tabela 1:** Tabela gerada com os resultados dos cálculos da raiz dos erros quadraticos médios entre a série em que os dados faltantes foram substituidos pela média e série original, com 100 observações.
+**Tabela 1:** Resultados dos cálculos do RMSE com dados faltantes foram substituidos pela média (n=100).
 
-A Tabela 1 revela que, à medida que o percentual de dados faltantes nas séries ajustadas aumenta, o valor da raiz do erro quadrático médio (RMSE) também tende a crescer. Isso indica que o método de imputação resulta em séries cada vez mais distantes da série original à medida que o número de dados ausentes aumenta.
+A Tabela 1 revela que, à medida que o percentual de dados faltantes nas séries ajustadas aumenta, o valor do RMSE também tende a crescer. Isso indica que o método de imputação resulta em séries cada vez mais distantes da série original à medida que o número de dados ausentes aumenta.
 
 Por outro lado, o impacto do aumento da complexidade do ajuste não segue um padrão tão claro. Embora o RMSE tenha aumentado em algumas situações e diminuído em outras, é possível notar uma leve tendência de aumento nos valores do RMSE em todas as porcentagens à medida que os modelos ajustados de séries temporais se tornam mais complexos. Essa variação sugere que a complexidade do modelo pode influenciar a precisão das previsões, mas não de maneira uniforme.
 
@@ -97,9 +83,9 @@ cemmediana <- read.csv("Planilhas/cemmediana.csv")
 ajustetabela(cemmediana,"AR.Rmse.04.med.100","AR.Rmse.06.med.100","AR.Rmse.0204.med.100","AR.Rmse.0405.med.100","ARMA.Rmse.0402.med.100")
 ```
 
-**Tabela 2:** Tabela gerada com os resultados dos cálculos da raiz dos erros quadraticos médios entre a série em que os dados faltantes foram substituidos pela mediana e série original, com 100 observações.
+**Tabela 2:** Resultados dos cálculos do RMSE com dados faltantes foram substituidos pela mediana (n=100).
 
-A Tabela 2, assim como o observado anteriomente na Tabela 1, revela que, à medida que o percentual de dados faltantes nas séries ajustadas aumenta, o valor da raiz do erro quadrático médio (RMSE) também tende a crescer. Isso indica que o método de imputação resulta em séries cada vez mais distantes da série original à medida que o número de dados ausentes aumenta.
+A Tabela 2, assim como o observado anteriomente na Tabela 1, revela que, à medida que o percentual de dados faltantes nas séries ajustadas aumenta, o valor do RMSE também tende a aumentar. Isso indica que o método de imputação resulta em séries cada vez mais distantes da série original à medida que o número de dados ausentes aumenta.
 
 Por outro lado, o impacto do aumento da complexidade do ajuste não segue um padrão tão claro. Embora o RMSE tenha aumentado em algumas situações e diminuído em outras, é possível notar uma leve tendência de aumento nos valores do RMSE em todas as porcentagens à medida que os modelos ajustados de séries temporais se tornam mais complexos. Essa variação sugere que a complexidade do modelo pode influenciar a precisão das previsões, mas não de maneira uniforme.
 
@@ -115,11 +101,11 @@ ajustetabela(milmedia,"AR.Rmse.04","AR.Rmse.06","AR.Rmse.0204","AR.Rmse.0405","A
 
 ------------------------------------------------------------------------
 
-**Tabela 3:** Tabela gerada com os resultados dos cálculos da raiz dos erros quadraticos médios entre a série em que os dados faltantes foram substituidos pela media e série original, com 1000 observações.
+**Tabela 3:** Resultados dos cálculos do RMSE com dados faltantes foram substituidos pela média (n=1000).
 
 A Tabela 3 revela que, à medida que o percentual de dados faltantes nas séries ajustadas aumenta, o valor da raiz do erro quadrático médio (RMSE) também tende a crescer. Isso indica que o método de imputação resulta em séries cada vez mais distantes da série original à medida que o número de dados ausentes aumenta.
 
-Ao contrário dos resultados observados na imputação da média com 100 observações, nesta análise o impacto do aumento da complexidade do ajuste apresenta um padrão mais consistente. Notavelmente, no modelo mais complexo (AR(2) com $\phi=0.4$ e $\phi=0.5$), houve um aumento significativo no RMSE em comparação aos outros modelos. Essa variação iretifica que, apesar de certa inconsistencia, há indicios de que a complexidade do modelo pode afetar a precisão das previsões.
+Ao contrário dos resultados observados na imputação da média com 100 observações, nesta análise o impacto do aumento da complexidade do ajuste gera valores mais discrepantes. Notavelmente, no modelo mais complexo (AR(2) com $\phi=0.4$ e $\phi=0.5$), houve um aumento significativo no RMSE em comparação aos outros modelos em todas as porcentagens analizadas. Isso indica que a complexidade do modelo pode afetar a precisão das previsões.
 
 ```{r}
 milmediana <- read.csv("Planilhas/milmediana.csv")
@@ -128,7 +114,7 @@ ajustetabela(milmediana,"AR.Rmse.04.med","AR.Rmse.06.med","AR.Rmse.0204.med","AR
 
 ------------------------------------------------------------------------
 
-**Tabela 4:** Tabela gerada com os resultados dos cálculos da raiz dos erros quadraticos médios entre a série em que os dados faltantes foram substituidos pela mediana e série original, com 1000 observações.
+**Tabela 4:** Resultados dos cálculos do RMSE com dados faltantes foram substituidos pela mediana (n=1000)
 
 A Tabela 4 revela que, à medida que o percentual de dados faltantes nas séries ajustadas aumenta, o valor da raiz do erro quadrático médio (RMSE) também tende a crescer. Isso indica que o método de imputação resulta em séries cada vez mais distantes da série original à medida que o número de dados ausentes aumenta.
 
