--- a/Rafael/Relatório parcial.qmd
+++ b/Rafael/Relatório parcial.qmd
@@ -32,6 +32,11 @@ As séries temporais foram geradas aleatoriamente à partir do modelo de ajuste 
 
 Depois de geradas, as mesmas series foram replicadas para os diferentes métodos de imputação dos dados faltantes.
 
+## Imputações com base em observações próximas
+
+(Explicação)\
+Para os modelos LOCF (Last Observation Carried Forward) e NOCB (Next Observation Carried Backward), após a imputação inicial, foi realizada uma imputação adicional utilizando a média da série para preencher os dados faltantes remanescentes. Essa etapa foi necessária devido à possibilidade de ausência de dados nas primeiras ou últimas observações da série, que não são contempladas pelos métodos LOCF e NOCB.
+
 ## Resultados
 
 A forma para a medição do impacto do método de imputação dos dados faltantes **(citar método utilizado)** em cada ajuste foi a geração de séries duplicadas. Após remoção aleatória de dados em diferentes porcentagens, sendo elas 5%, 10%, 20% e 40% essas lacunas foram preenchidas com algum método de imputação de dados, e depois disso, foi calculado a raiz do erro quadrático médio (RMSE) entre essa série que passou por modificação e a série que se mateve original. Os resultados foram registrados em tabelas para cada método de imputação e para dois tamanhos de amostra, 100 observações e 1000 observações. Esses resultados, que se encontram à seguir, foram separados em subceções para cada tamanho de amostra. Dessa forma, podemos comparar o efeito de cada método de imputação de dados para amostras de cada tamanho separadamente, analisando o impacto em relação a quantidade de dados faltantes gerados e o ajuste da série.
@@ -41,7 +46,7 @@ A forma para a medição do impacto do método de imputação dos dados faltante
 Nessa subseção se encontram os resultados obtidos através do processo de imputação de dados faltantes à partir de diferentes métodos em modelos de séries temporais, de diferentes ajustes, todos com uma amostra de 100 observações.
 
 ```{r}
-cemmedia <- read.csv("Planilhas/cemmedia.csv") 
+cemmedia <- read.csv("Planilhas/cemedia.csv") 
 
 ajustetabela <- function(data, col1, col2, col3, col4, col5) {
   col1 <- enquo(col1)
@@ -85,11 +90,24 @@ ajustetabela(cemmediana,"AR.Rmse.04.med.100","AR.Rmse.06.med.100","AR.Rmse.0204.
 
 **Tabela 2:** Resultados dos cálculos do RMSE com dados faltantes foram substituidos pela mediana (n=100).
 
-A Tabela 2, assim como o observado anteriomente na Tabela 1, revela que, à medida que o percentual de dados faltantes nas séries ajustadas aumenta, o valor do RMSE também tende a aumentar. Isso indica que o método de imputação resulta em séries cada vez mais distantes da série original à medida que o número de dados ausentes aumenta.
+A Tabela 2, assim como observado anteriormente na Tabela 1, demonstra que, à medida que o percentual de dados faltantes nas séries ajustadas aumenta, o valor do RMSE tende a crescer. Isso evidencia que o método de imputação gera séries progressivamente mais distantes da série original à medida que a quantidade de dados ausentes se eleva.
 
-Por outro lado, o impacto do aumento da complexidade do ajuste não segue um padrão tão claro. Embora o RMSE tenha aumentado em algumas situações e diminuído em outras, é possível notar uma leve tendência de aumento nos valores do RMSE em todas as porcentagens à medida que os modelos ajustados de séries temporais se tornam mais complexos. Essa variação sugere que a complexidade do modelo pode influenciar a precisão das previsões, mas não de maneira uniforme.
+Por outro lado, o impacto do aumento na complexidade do ajuste não apresenta um padrão bem definido. Embora em algumas situações o RMSE tenha aumentado e, em outras, diminuído, percebe-se uma leve tendência de crescimento nos valores de RMSE em todas as porcentagens à medida que os modelos ajustados de séries temporais se tornam mais complexos. Essa oscilação sugere que a complexidade do modelo pode afetar a precisão das previsões, mas de maneira não uniforme.
 
-Não há mudança clara nos resultados que indique impacto da mudança do método de imputação de dados da média para a mediana.
+Não foi observada uma mudança clara nos resultados que indique influência da substituição do método de imputação de dados da média para a mediana.
+
+```{r}
+cemdown <- read.csv("Planilhas/cemdown.csv")
+ajustetabela(cemdown,"AR.Rmse.04","AR.Rmse.06","AR.Rmse.0204","AR.Rmse.0405","ARMA.Rmse.0402")
+```
+
+------------------------------------------------------------------------
+
+**Tabela 3:** Resultados dos cálculos do RMSE com dados faltantes foram substituidos atravéz do método LOCF (n = 100)
+
+Na Tabela 3, foi identificado o mesmo padrão de aumento da distância entre as séries com imputações e as séries originais à medida que a porcentagem de dados faltantes aumentava. Observou-se um comportamento semelhante ao dos demais métodos de imputação em relação ao aumento da complexidade dos ajustes. No entanto, destaca-se que, no ajuste AR(2) $(\phi_1=0.2, \phi_2=0.4)$, o método LOCF apresentou desempenho significativamente melhor em comparação com os outros ajustes.
+
+Em relação à imputação pela média e pela mediana, o método LOCF resultou em um aumento do RMSE na maioria das combinações de porcentagens de dados faltantes e ajustes. A única exceção foi no ajuste AR(2) $(\phi_1=0.2, \phi_2=0.4)$, onde o LOCF teve desempenho superior em todas as porcentagens de dados faltantes, exceto em 40%, onde o RMSE foi semelhante ao dos demais métodos. Além disso, observou-se que, com o LOCF, os valores do RMSE tendiam a crescer de forma mais acentuada conforme aumentavam as porcentagens de dados faltantes.
 
 ### Amostras de 1000 observações:
 
@@ -101,11 +119,11 @@ ajustetabela(milmedia,"AR.Rmse.04","AR.Rmse.06","AR.Rmse.0204","AR.Rmse.0405","A
 
 ------------------------------------------------------------------------
 
-**Tabela 3:** Resultados dos cálculos do RMSE com dados faltantes foram substituidos pela média (n=1000).
+**Tabela 4:** Resultados dos cálculos do RMSE com dados faltantes foram substituidos pela média (n=1000).
 
-A Tabela 3 revela que, à medida que o percentual de dados faltantes nas séries ajustadas aumenta, o valor da raiz do erro quadrático médio (RMSE) também tende a crescer. Isso indica que o método de imputação resulta em séries cada vez mais distantes da série original à medida que o número de dados ausentes aumenta.
+A Tabela 4 mostra que, com o aumento do percentual de dados faltantes nas séries ajustadas, os valores da raiz do erro quadrático médio (RMSE) também se elevam. Esse comportamento sugere que o método de imputação gera séries progressivamente mais distantes da série original à medida que cresce a quantidade de dados ausentes.
 
-Ao contrário dos resultados observados na imputação da média com 100 observações, nesta análise o impacto do aumento da complexidade do ajuste gera valores mais discrepantes. Notavelmente, no modelo mais complexo (AR(2) com $\phi=0.4$ e $\phi=0.5$), houve um aumento significativo no RMSE em comparação aos outros modelos em todas as porcentagens analizadas. Isso indica que a complexidade do modelo pode afetar a precisão das previsões.
+Diferentemente dos resultados obtidos na imputação pela média com 100 observações, nesta análise o aumento da complexidade do ajuste ocasiona valores mais divergentes. Destaca-se que, no modelo mais elaborado (AR(2) com $\phi=0.4$ e $\phi=0.5$), houve um crescimento expressivo no RMSE em relação aos demais modelos em todas as porcentagens avaliadas. Esse padrão sugere que a complexidade do modelo pode influenciar negativamente a precisão das previsões.
 
 ```{r}
 milmediana <- read.csv("Planilhas/milmediana.csv")
@@ -114,10 +132,37 @@ ajustetabela(milmediana,"AR.Rmse.04.med","AR.Rmse.06.med","AR.Rmse.0204.med","AR
 
 ------------------------------------------------------------------------
 
-**Tabela 4:** Resultados dos cálculos do RMSE com dados faltantes foram substituidos pela mediana (n=1000)
+**Tabela 5:** Resultados dos cálculos do RMSE com dados faltantes foram substituidos pela mediana (n=1000)
 
-A Tabela 4 revela que, à medida que o percentual de dados faltantes nas séries ajustadas aumenta, o valor da raiz do erro quadrático médio (RMSE) também tende a crescer. Isso indica que o método de imputação resulta em séries cada vez mais distantes da série original à medida que o número de dados ausentes aumenta.
+Na Tabela 5 é possível observar novamente que não há diferença clara entre os métodos de imputação pela média e pela mediana. As considerações feitas à respeito da Tabela 4 também são válidas para a Tabela 5.
 
-Ao contrário dos resultados observados na imputação da média com 100 observações, nesta análise o impacto do aumento da complexidade do ajuste apresenta um padrão mais consistente. Notavelmente, no modelo mais complexo (AR(2) com $\phi=0.4$ e $\phi=0.5$), houve um aumento significativo no RMSE em comparação aos outros modelos. Essa variação iretifica que, apesar de certa inconsistencia, há indicios de que a complexidade do modelo pode afetar a precisão das previsões.
+```{r}
+mildown <- read.csv("Planilhas/mildown.csv")
+ajustetabela(mildown,"AR.Rmse.04","AR.Rmse.06","AR.Rmse.0204","AR.Rmse.0405","ARMA.Rmse.0402")
+```
 
-Novamente há mudança clara nos resultados que indique impacto da mudança do método de imputação de dados da média para a mediana.
+------------------------------------------------------------------------
+
+**Tabela 6:** Resultados dos cálculos do RMSE com dados faltantes foram substituidos atravéz do método LOCF (n = 1000)
+
+A Tabela 6 apresentou um padrão de comportamento do RMSE semelhante ao observado na comparação entre o método LOCF e as imputações por média e mediana com 100 observações. O aumento geral do RMSE, previamente identificado nas simulações com $n=1000$, também foi constatado nesta análise.
+
+Destaca-se uma redução significativa do RMSE no ajuste AR(2) ($\phi_1=0.2, \phi_2=0.4$), em linha com o que já havia sido observado na simulação com $n=100$. No entanto, nesta simulação, essa redução também foi registrada no ajuste AR(2) $(\phi_1=0.4,  \phi_2=0.5)$, que apresentou RMSE inferior ao das imputações por média e mediana em todas as porcentagens avaliadas. Apesar disso, este ajuste teve desempenho inferior aos demais da mesma simulação, refletindo o impacto negativo de seu alto grau de complexidade.
+
+## Visualização gráfica das imputações
+
+Para visualização da imputação dos dados faltantes na série foram gerados gráficos das séries temporais ARMA(1,1)$(\phi=0.2, \theta=0,4)$ com 10% de dados faltantes, onde os trechos coloridos representam os dados imputados.
+
+![](Gráficos/Gráfico Imputação com média.png){fig-align="center"}
+
+------------------------------------------------------------------------
+
+![](Gráficos/Grafico imputação mediana.png)
+
+------------------------------------------------------------------------
+
+![](Gráficos/Imputação com LOCF down.png)
+
+------------------------------------------------------------------------
+
+![](Gráficos/Imputação com NOCB.png)
